[gd_scene load_steps=3 format=3 uid="uid://dhneeevpsn754"]

[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_q7ws3"]
[ext_resource type="Texture2D" uid="uid://l2yo2168lhk5" path="res://Imagenes/istockphoto-1437048444-612x612.jpg" id="2_a43mr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7ws3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a43mr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -72.5
offset_right = 138.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 23

[node name="JUGAR" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "JUGAR"

[node name="INSTRUCCIONES" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "INSTRUCCIONES"

[node name="CREDITOS" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "CREDITOS"

[connection signal="pressed" from="VBoxContainer/JUGAR" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/INSTRUCCIONES" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="VBoxContainer/CREDITOS" to="." method="_on_creditos_pressed"]
